--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulo</title>
+    <title>primera pagina web</title>
 </head>
 <body>
-    <h1>subtitulo  xd</h1>
+    
+    <header>
+        <h1>mi blog</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>principal</li>
+            <li>noticias</li>
+            <li>contacto</li>
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <hgrup>
+                <h1>¿quienes es el ganar de la red bull internacional 2020?</h1>
+                <h2>RAPDER CAMPEON MUNDIAL DE RED BULL INTERNACIONAL 2020</h2>
+                <img style="width:20%"src="https://vignette.wikia.nocookie.net/rap/images/5/55/Rapder1.jpeg/revision/latest?cb=20190415211813&path-prefix=es" alt="rapder">
+            </hgrup>
+        </article>
+    </section>
 </body>
 </html>
