--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primera pagina web</title>
+    <title>hola mundo</title>
 </head>
 <body>
     
@@ -23,6 +23,24 @@
                 <h1>¿quienes es el ganar de la red bull internacional 2020?</h1>
                 <h2>RAPDER CAMPEON MUNDIAL DE RED BULL INTERNACIONAL 2020</h2>
                 <img style="width:20%"src="https://vignette.wikia.nocookie.net/rap/images/5/55/Rapder1.jpeg/revision/latest?cb=20190415211813&path-prefix=es" alt="rapder">
+            </hgrup>
+        </article>
+    </section>
+    <section>
+        <article>
+            <hgrup>
+                <h1>participantes de la red bull internacional 2020</h1>
+                <li>aczino</li>
+                <li>valles-t</li>
+                <li>bnet</li>
+                <li>acertijo</li>
+                <li>tata</li>
+                <li>wos</li>
+                <li>trueno</li>
+                <li>lancer lirical</li>
+                <li>dani</li>
+                <li>lobo stepario</li>
+                <li>jaze</li>
             </hgrup>
         </article>
     </section>
